--- a/index.html
+++ b/index.html
@@ -26,9 +26,12 @@
 
     <script type="text/javascript" src="assets/jquery/jquery.highlight.js"></script>
     <script type="text/javascript" src="assets/jquery/jquery.pulsate.js"></script>
+    <script type="text/javascript" src="assets/jquery/jquery.scrollTo.js"></script>
 
     <script type="text/javascript" src="assets/phpjs/strtotime.js"></script>
     <script type="text/javascript" src="assets/phpjs/date.js"></script>
+
+    <script type="text/javascript" src="assets/undomanager.js"></script>
 
     <script type="text/javascript" src="js/color.js"></script>
     <script type="text/javascript" src="js/snte.js"></script>
@@ -173,8 +176,8 @@
             <button type="button" class="btn btn-default" id="snte-menu-save-worksheet" title="" data-i18n="[title]chrome.save-worksheet"><span class="glyphicon glyphicon-floppy-disk"></span></button>
           </div>-->
           <div class="btn-group">
-            <button type="button" class="btn btn-default" id="snte-menu-undo" title="" data-i18n="[title]chrome.undo"><span class="glyphicon glyphicon-arrow-left"></span></button>
-            <button type="button" class="btn btn-default" id="snte-menu-redo" title="" data-i18n="[title]chrome.redo"><span class="glyphicon glyphicon-share-alt"></span></button>
+            <button type="button" class="btn btn-default disabled" id="snte-menu-undo" title="" data-i18n="[title]chrome.undo"><span class="glyphicon glyphicon-arrow-left"></span></button>
+            <button type="button" class="btn btn-default disabled" id="snte-menu-redo" title="" data-i18n="[title]chrome.redo"><span class="glyphicon glyphicon-share-alt"></span></button>
           </div>
           <div class="btn-group">
             <button type="button" class="btn btn-default" id="snte-menu-copy" title="" data-i18n="[title]chrome.copy">C</button>
