--- a/index.html
+++ b/index.html
@@ -45,15 +45,27 @@
     <link rel='stylesheet' type='text/css' href='http://fonts.googleapis.com/css?family=Gilda+Display'>
   </head>
   <body>
-    <!-- Error Message Modal 
-    <div class="modal fade" id="snte-error-modal" tabindex="-1" role="dialog">
+    <!-- CopyPaste Hint Modal -->
+    <div class="modal fade" id="snte-copypaste-modal" tabindex="-1" role="dialog">
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal">&times;</button>
-            <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+            <h4 class="modal-title" data-i18n="copy-paste.hint.header"></h4>
           </div>
           <div class="modal-body">
+            <p data-i18n="[append]copy-paste.hint.description"></p>
+            <div class="snte-copypaste-modal-shortcuts">
+              <div class="snte-copypaste-modal-shortcut" data-i18n="[append]copy-paste.hint.copy">
+                <div class="snte-copypaste-modal-shortcut-command" id="snte-copypaste-modal-shortcut-command-copy" data-i18n="copy-paste.hint.cmd-copy-pc"></div>
+              </div>
+              <div class="snte-copypaste-modal-shortcut" data-i18n="[append]copy-paste.hint.cut">
+                <div class="snte-copypaste-modal-shortcut-command" id="snte-copypaste-modal-shortcut-command-cut" data-i18n="copy-paste.hint.cmd-cut-pc"></div>
+              </div>
+              <div class="snte-copypaste-modal-shortcut" data-i18n="[append]copy-paste.hint.paste">
+                <div class="snte-copypaste-modal-shortcut-command" id="snte-copypaste-modal-shortcut-command-paste" data-i18n="copy-paste.hint.cmd-paste-pc"></div>
+              </div>
+            </div>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-primary" data-dismiss="modal">OK</button>
@@ -61,7 +73,7 @@
         </div>
       </div>
     </div>-->
-
+    <!-- End CopyPaste Hint Modal -->
     <!-- Image Upload Modal -->
     <div class="modal fade" id="snte-image-modal" tabindex="-1" role="dialog">
       <div class="modal-dialog">
@@ -181,6 +193,7 @@
           </div>
           <div class="btn-group">
             <button type="button" class="btn btn-default" id="snte-menu-copy" title="" data-i18n="[title]chrome.copy">C</button>
+            <button type="button" class="btn btn-default" id="snte-menu-cut" title="" data-i18n="[title]chrome.cut">C</button>
             <button type="button" class="btn btn-default" id="snte-menu-paste" title="" data-i18n="[title]chrome.paste">P</button>
           </div>
           <div class="btn-group">
