removed unused code fixed jumping formula-help-bar added support for cmd key when editing a formula

--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
               <button type="button" class="btn btn-info" id="snte-menu-formula-arithmetic-div" data-value="/" title="" data-i18n="[title]formula.arithmetic.div.title;formula.arithmetic.div.button"></button>
             </div>
           </div>
-          <div id="snte-menubar-formula-help">&nbsp;</div>
+          <div id="snte-menubar-formula-help"><span class="syntax">&nbsp;</span></div>
         </div>
       </div>
     </div>
