icons for table context menu

--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
             <ul class="dropdown-menu" role="menu">
               <li>
                 <a href="#" data-item="table" data-i18n="[append]chrome.new-element-table">
-                  <span class="icon-table"></span>
+                  <span class="icon-table2"></span>
                 </a>
               </li>
               <li>
