new version 0.6-alpha. fixes:  - fillcolor for whole textfield/comment  - fixed bug in excel-cell library (unary +/- operator)  - disabled axis label inputs for chart types not supporting axis  - changed search-control behavior: X only clears input but searchbox stays open  - changed search-control behavior: closing searchbox unhighlights search results  - made popovers fixed on screen so they don't move when workspace is scrolled  - put back old wording for "first row contains headers" --> question seems unprofessional  - "first row contains headers" now unchecked per default

--- a/index.html
+++ b/index.html
@@ -127,17 +127,17 @@
               <button type="button" class="btn btn-default snte-chart-wizard-type" id="snte-chart-wizard-type-smoothline" data-value="smoothline" title="" data-i18n="[title]chart.type.smoothline.title"><span></span></button>
               <button type="button" class="btn btn-default snte-chart-wizard-type" id="snte-chart-wizard-type-area" data-value="area" title="" data-i18n="[title]chart.type.area.title"><span></span></button><br />
 
-              <button type="button" class="btn btn-default snte-chart-wizard-type" id="snte-chart-wizard-type-vbar" data-value="vbar" title="" data-i18n="[title]chart.type.vbar.title"><span></span></button>
+              <button type="button" class="btn btn-default snte-chart-wizard-type active" id="snte-chart-wizard-type-vbar" data-value="vbar" title="" data-i18n="[title]chart.type.vbar.title"><span></span></button>
               <button type="button" class="btn btn-default snte-chart-wizard-type" id="snte-chart-wizard-type-hbar" data-value="hbar" title="" data-i18n="[title]chart.type.hbar.title"><span></span></button><br />
 
-              <button type="button" class="btn btn-default snte-chart-wizard-type active" id="snte-chart-wizard-type-pie" data-value="pie" title="" data-i18n="[title]chart.type.pie.title"><span></span></button>
+              <button type="button" class="btn btn-default snte-chart-wizard-type" id="snte-chart-wizard-type-pie" data-value="pie" title="" data-i18n="[title]chart.type.pie.title"><span></span></button>
               <button type="button" class="btn btn-default snte-chart-wizard-type" id="snte-chart-wizard-type-donut" data-value="donut" title="" data-i18n="[title]chart.type.donut.title"><span></span></button>
             </div>
             <h5 data-i18n="chart.wizard.header-data"></h5>
             <div class="well">
               <div id="snte-chart-wizard-cellrange"></div>
               <div>
-                <input type="checkbox" id="snte-chart-wizard-first-data-row" checked="checked">&nbsp;<label for="snte-chart-wizard-first-data-row" data-i18n="chart.wizard.first-data-row"></label>
+                <input type="checkbox" id="snte-chart-wizard-first-data-row">&nbsp;<label for="snte-chart-wizard-first-data-row" data-i18n="chart.wizard.first-data-row"></label>
               </div>
             </div>
             <h5 data-i18n="chart.wizard.header-axis"></h5>
@@ -185,7 +185,7 @@
       <!-- End Searchbox -->
       <div id="snte-chrome-top-left">
         <div id="snte-logo" title="say no to excel!">snte</div>
-        <div id="snte-version">v0.5-alpha</div>
+        <div id="snte-version">v0.6-alpha</div>
       </div>
       <div id="snte-chrome-top-right">
         <div id="snte-menubar-top" class="btn-toolbar" role="toolbar">
