fixed bug where comment field had transparent background after creation (when another element was already on workspace)

--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
               </li>
               <li id="snte-menu-add-element-chart" class="disabled">
                 <a href="#" data-item="chart" data-i18n="[append]chrome.new-element-chart">
-                  <span class="icon-pie"></span>
+                  <span class="icon-stats"></span>
                 </a>
               </li>
               <li>
