new feature: selected cells can be used as input for SUM, AVG, MIN, MAX and COUNT

--- a/index.html
+++ b/index.html
@@ -374,12 +374,12 @@
         <div id="snte-menubar-formula"  style="display: none;">
           <div class="btn-toolbar" role="toolbar">
             <div class="btn-group snte-formula-functions">
-              <button type="button" class="btn btn-info" id="snte-menu-formula-function-sum" data-value="SUM(" title="" data-i18n="[title]formula.function.sum.title;formula.function.sum.button"></button>
-              <button type="button" class="btn btn-info" id="snte-menu-formula-function-avg" data-value="AVG(" title="" data-i18n="[title]formula.function.avg.title;formula.function.avg.button"></button>
-              <button type="button" class="btn btn-info" id="snte-menu-formula-function-min" data-value="MIN(" title="" data-i18n="[title]formula.function.min.title;formula.function.min.button"></button>
-              <button type="button" class="btn btn-info" id="snte-menu-formula-function-max" data-value="MAX(" title="" data-i18n="[title]formula.function.max.title;formula.function.max.button"></button>
-              <button type="button" class="btn btn-info" id="snte-menu-formula-function-count" data-value="COUNT(" title="" data-i18n="[title]formula.function.count.title;formula.function.count.button"></button>
-              <button type="button" class="btn btn-info" id="snte-menu-formula-function-if" data-value="IF(" title="" data-i18n="[title]formula.function.if.title;formula.function.if.button"></button>
+              <button type="button" class="btn btn-info" id="snte-menu-formula-function-sum" data-value="SUM" title="" data-i18n="[title]formula.function.sum.title;formula.function.sum.button"></button>
+              <button type="button" class="btn btn-info" id="snte-menu-formula-function-avg" data-value="AVG" title="" data-i18n="[title]formula.function.avg.title;formula.function.avg.button"></button>
+              <button type="button" class="btn btn-info" id="snte-menu-formula-function-min" data-value="MIN" title="" data-i18n="[title]formula.function.min.title;formula.function.min.button"></button>
+              <button type="button" class="btn btn-info" id="snte-menu-formula-function-max" data-value="MAX" title="" data-i18n="[title]formula.function.max.title;formula.function.max.button"></button>
+              <button type="button" class="btn btn-info" id="snte-menu-formula-function-count" data-value="COUNT" title="" data-i18n="[title]formula.function.count.title;formula.function.count.button"></button>
+              <button type="button" class="btn btn-info" id="snte-menu-formula-function-if" data-value="IF" title="" data-i18n="[title]formula.function.if.title;formula.function.if.button"></button>
             </div>
             <div class="btn-group snte-formula-relations">
               <button type="button" class="btn btn-info" id="snte-menu-formula-relation-lt" data-value="<" title="" data-i18n="[title]formula.relation.lt.title;formula.relation.lt.button"></button>
