fixed bug in search-toolbox (focus on searchfield when searchbox is opened) removed unnecessary CSS selectors in search-related code

--- a/index.html
+++ b/index.html
@@ -161,21 +161,21 @@
       <!-- Searchbox -->
       <div id="snte-searchbox" class="snte-hidden">
         <div id="snte-searchbox-title" data-i18n="[prepend]search.title">
-          <div class="snte-searchbox-resultcount"></div>
+          <div id="snte-searchbox-resultcount"></div>
         </div>
         <div id="snte-searchbox-content">
           <div class="row" role="toolbar" style="width: 350px;">
               <div class="col-md-7">
-                <input type="text" class="form-control snte-menu-search-input" placeholder="" data-i18n="[placeholder]search.placeholder" />
+                <input type="text" class="form-control" id="snte-menu-search-input" placeholder="" data-i18n="[placeholder]search.placeholder" />
               </div>
               <div class="btn-group">
-                <button type="button" class="btn btn-default snte-menu-search-next" title="" data-i18n="[title]search.next-result">
+                <button type="button" class="btn btn-default" id="snte-menu-search-next" title="" data-i18n="[title]search.next-result">
                   <span class="glyphicon glyphicon-chevron-down"></span>
                 </button>
-                <button type="button" class="btn btn-default snte-menu-search-prev" title="" data-i18n="[title]search.previous-result">
+                <button type="button" class="btn btn-default" id="snte-menu-search-prev" title="" data-i18n="[title]search.previous-result">
                   <span class="glyphicon glyphicon-chevron-up"></span>
                 </button>
-                <button type="button" class="btn btn-default snte-menu-search-clear" title="" data-i18n="[title]search.clear">
+                <button type="button" class="btn btn-default" id="snte-menu-search-clear" title="" data-i18n="[title]search.clear">
                   <span class="glyphicon glyphicon-remove"></span>
                 </button>
               </div>
